# fast-mia

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Makefile  NOTICE  README.md  index.html  main.py  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml
.agents/skills/add-mia-method/: SKILL.md
.claude/skills/: add-mia-method
.github/: CODEOWNERS
.github/workflows/: CI.yaml  docs.yaml  release.yaml
adding-methods/: index.html
api-reference/: index.html
config/: llama30b-exp-ref.yaml  llama30b-exp.yaml  mimir-sample.yaml  sample.yaml
data/: sample_data.csv  sample_data.json  sample_data.jsonl  sample_data.parquet
docs/: mkdocs.yml
docs/docs/: adding-methods.md  api-reference.md  google-cloud.md  how-to-use.md  index.md
gcp/: setup_instance.sh  submit_job.sh
google-cloud/: index.html
how-to-use/: index.html
search/: search_index.json
src/: config.py  data_loader.py  evaluator.py  main.py  model_loader.py  result_writer.py  utils.py  visualizer.py
src/methods/: __init__.py  base.py  conrecall.py  dcpdd.py  factory.py  loss.py  lower.py  mink.py  neighbour.py  pac.py  prefix_utils.py  recall.py  ref.py  samia.py  wbc.py  zlib.py
stylesheets/: extra.css
tests/: conftest.py  test_config_integration.py  test_data_loader_integration.py  test_end_to_end_integration.py
tests/fixtures/: invalid_config.yaml  malformed_config.yaml  test_data.csv  test_data.json  test_data.jsonl  test_data.parquet  valid_config.yaml
tests/unit/: test_config.py  test_config_mock.py  test_data_loader.py  test_evaluator.py  test_factory.py  test_model_loader.py  test_result_writer.py
