[project]
name = "fast-mia"
version = "0.1.0"
authors = [
    {name = "Hiromu Takahashi", email = "hiromu.takahashi56@gmail.com"},
    {name = "Shotaro Ishihara", email = "shotaro.ishihara@nex.nikkei.com"},
]
maintainers = [
    {name = "Hiromu Takahashi", email = "hiromu.takahashi56@gmail.com"},
    {name = "Shotaro Ishihara", email = "shotaro.ishihara@nex.nikkei.com"},
]
description = "A framework designed to streamline the evaluation of Membership Inference Attacks (MIA) against Large Language Models (LLMs). By leveraging vLLM, it enables fast and flexible execution and assessment of various representative MIA techniques."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.1",
    "matplotlib>=3.8.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
]
keywords = ["LLM", "Membership Inference Attacks", "MIA"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings-python>=1.18.2",
    "mkdocs-autorefs>=1.2.1",
    "pymdown-extensions>=10.13",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "ruff==0.11.5",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
exclude = ["tests"]

[tool.ruff.lint]
# Selected error types
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    # "D",  # pydocstyle
    "B",  # flake8-bugbear
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
]
# Excluded error types
ignore = [
    "E402",  # module-import-not-at-top-of-file
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904",  # raise ... from ...
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = ["vllm"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/__init__.py", "*/conftest.py"]
